--- a/styles/ldf.css
+++ b/styles/ldf.css
@@ -85,73 +85,12 @@ ul {
   margin: 0 0 .5em 1.5em;
   list-style: none;
 }
+li {
+  margin: .25em 0;
+}
 
 pre {
   margin: 0;
-}
-
-form {
-  margin: 0 0 1.5em;
-}
-
-fieldset {
-  border: none;
-  padding: .5em 0 0 20px;
-}
-fieldset ul {
-  margin-left: 0;
-}
-fieldset li {
-  line-height: 2em;
-}
-
-legend {
-  font-size: 1.17em;
-  font-weight: bold;
-  padding: 0;
-  margin-left: -20px;
-}
-
-label {
-  width: 100px;
-  display: block;
-  float: left;
-  clear: both;
-  font-weight: bold;
-}
-label:after {
-  content: ":";
-}
-
-input {
-  outline: none;
-  font-size: .95em;
-}
-fieldset input {
-  width: 500px;
-  color: #be1622;
-  background-color: transparent;
-  border: none;
-  border-bottom: 1px solid #bbbbbb;
-  cursor: pointer;
-}
-input[type=submit] {
-  font-weight: bold;
-  color: #be1622;
-  background-color: #f6f6f6;
-  border-radius: 3px;
-  padding: 5px 8px;
-  border: 1px solid #999999;
-  cursor: pointer;
-}
-input[type=submit]:hover {
-  border-color: #666666;
-}
-input[type=submit]:active {
-  padding: 6px 7px 4px 9px;
-}
-.uri {
-  font-family: "Droid Sans Mono", monospace;
 }
 
 header .logo {
@@ -177,75 +116,6 @@ footer * {
   margin-right: 5px;
 }
 
-.counts {
-  color: gray;
-}
-ul.links {
-  margin: 0;
-  padding: 0;
-  display: inline;
-}
-ul.links li {
-  display: inline;
-  padding-left: 20px;
-  font-weight: bold;
-}
-
-ul.triples {
-  margin: .3em 0 1em 20px;
-  font-size: .95em;
-  line-height: 1.5;
-  font-family: "Droid Sans Mono", monospace;
-  overflow-x: hidden;
-}
-ul.triples li {
-  text-indent: -20px;
-  padding-left: 20px;
-  max-width: 100%;
-  max-height: 1.5em;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-ul.triples li:hover {
-  max-height: 100em;
-  white-space: normal;
-  transition: max-height .5s ease-in;
-  transition-delay: .5s;
-}
-ul.triples li:not(:hover) a {
-  color: inherit;
-}
-ul.triples a:nth-child(2) {
-  margin: 0 1em;
-}
-abbr {
-  border: none;
-}
-
-.index {
-  margin-bottom: 2em;
-}
-.datasets {
-  margin: .5em 20px;
-}
-dt {
-  font-weight: bold;
-  display: block;
-  float: left;
-  clear: left;
-}
-dd {
-  color: gray;
-  margin: .1em 0 0 12em;
-  font-size: .95em;
-}
-
-#about {
-  margin-top: 1.5em;
-  font-size: .9em;
-}
-
 @media screen and (max-width: 700px) {
   html, input, th, td {
     font-size: 10pt;
@@ -258,19 +128,6 @@ dd {
   }
   h1, legend {
     margin: 0;
-  }
-  fieldset, ul.triples {
-    padding: .5em 0;
-    margin: 0;
-  }
-  fieldset input {
-    width: 70%;
-  }
-  label {
-    width: 80px;
-  }
-  ul.triples li {
-    margin: 1em 0;
   }
 }
 
